--- a/styles/style.css
+++ b/styles/style.css
@@ -7,10 +7,13 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
+
 }
 
 
-
+.page {
+    height: 100vh;
+}
 
 body {
     height: 100%;
@@ -18,14 +21,45 @@ body {
 }
 
 
-
-
-switch {
-    display: flex;
-    color: #071723;
+#tema {
+    display: none;
 }
 
 
+.dark-mode-toggler {
+    text-align: center;
+    position: absolute;
+    width: 40px;
+    height: 20px;
+    background: #ccc;
+    border: 2px solid #bbb;
+    border-radius: 20px;
+    top: 10px;
+    right: 10px;
+    transition: all 300ms ease-in-out;
+    border-color: #071723;
+}
+
+.dark-mode-toggler div {
+    width: 12px;
+    height: 12px;
+    background: #071723;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    transition: all 300ms ease-in-out;
+}
+
+#tema:checked~.dark-mode-toggler {
+    background: #071723;
+    border-color: #DDE3E9;
+}
+
+#tema:checked~.dark-mode-toggler div {
+    background: #DDE3E9;
+    left: 21px;
+}
 
 header {
     background-color: #2F3676;
@@ -72,7 +106,7 @@ legend {
     font-size: 30px;
     line-height: 25px;
 
-    color: #071723;
+
 }
 
 textarea {
@@ -116,7 +150,7 @@ img {
 
 footer {
     position: absolute;
-    background: #DDE3E9;
+    background: #ccc;
     height: 100px;
     bottom: 0;
     width: 100%;
@@ -198,7 +232,7 @@ fieldset {
     font-size: 30px;
     line-height: 25px;
     margin-left: 15px;
-    color: #071723;
+
 }
 
 #botoes {
@@ -216,23 +250,16 @@ fieldset {
     padding-top: 5px;
     font-size: 25px;
     text-align: center;
+    color: black;
 }
 
 
 
 .inputs {
     font-size: 28px;
-    color: #071723;
+
 }
 
-.message {
-    height: 101px;
-    width: 598px;
-    left: 730px;
-    top: 538px;
-    border-radius: 0px;
-    text-align: center;
-}
 
 .success {
     position: absolute;
